--- a/trick-dan-tips-jitu-pg-soft-untuk-pemula-bisa-mendapatkan-kan-cuan-dengan-modal-tipis-wede-terus.html
+++ b/trick-dan-tips-jitu-pg-soft-untuk-pemula-bisa-mendapatkan-kan-cuan-dengan-modal-tipis-wede-terus.html
@@ -227,8 +227,8 @@
             </div>
           </div>
           <div class='button-wrapper'>
-            <a href='https://detikone.popoykingdom.homes/hoki3' rel = "nofollow" class='btn-secondary'>Daftar</a>
-            <a href='https://detikone.popoykingdom.homes/hoki3' rel = "nofollow" class='btn-primary'>Login</a>
+            <a href='https://invitation.link/bosthata-gunung388' rel = "nofollow" class='btn-secondary'>Daftar</a>
+            <a href='https://invitation.link/bosthata-gunung388' rel = "nofollow" class='btn-primary'>Login</a>
           </div>
         </div>
       <br>
@@ -248,12 +248,12 @@
         <section class='n-container m-b-normal'>
       <div class="btn-body">
         <div class="btn-items">
-          <a href="https://detikone.popoykingdom.homes/hoki3" rel="nofollow noreferrer" target="_blank">
+          <a href="https://invitation.link/bosthata-gunung388" rel="nofollow noreferrer" target="_blank">
             <amp-img src="https://imagizer.imageshack.com/img922/4025/x4rxw0.png" width="150" height="45" alt="Login GUNUNG388" layout="fixed"></amp-img>
           </a>
         </div>
         <div class="btn-items">
-          <a href="https://detikone.popoykingdom.homes/hoki3" rel="nofollow noreferrer" target="_blank">
+          <a href="https://invitation.link/bosthata-gunung388" rel="nofollow noreferrer" target="_blank">
             <amp-img src="https://imagizer.imageshack.com/img922/4025/x4rxw0.png" width="150" height="45" alt="Login GUNUNG388" layout="fixed"></amp-img>
           </a>
         </div>
@@ -266,7 +266,7 @@
             <tbody>
               <tr>
                 <td>Link Anti Nawala</td>
-                <td class="#">🚀 <a href="https://detikone.popoykingdom.homes/hoki3" class="rainbow-text">GUNUNG388</a></td>
+                <td class="#">🚀 <a href="https://invitation.link/bosthata-gunung388" class="rainbow-text">GUNUNG388</a></td>
               </tr>
               <tr>
                 <td>Nama Situs</td>
